Added SceneSwitch fade, added GameManager, did some fine tuning

--- a/Hackulous/Assembly-CSharp.csproj
+++ b/Hackulous/Assembly-CSharp.csproj
@@ -46,7 +46,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\script\Drag.cs" />
+     <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\SphereMove.cs" />
+     <Compile Include="Assets\script\SwitchScene.cs" />
      <Compile Include="Assets\script\splash\IntroFade.cs" />
      <None Include="Assets\font\Ubuntu_Mono\UFL.txt" />
  <Reference Include="UnityEngine.UI">
