--- a/Hackulous/Hackulous.CSharp.csproj
+++ b/Hackulous/Hackulous.CSharp.csproj
@@ -63,11 +63,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\TypeOut\Scripts\GUIScript.cs" />
-    <Compile Include="Assets\TypeOut\Scripts\TypeOutEditor.cs" />
-    <Compile Include="Assets\TypeOut\Scripts\TypeOutScript.cs" />
+    <Compile Include="Assets\script\Drag.cs" />
     <Compile Include="Assets\script\SphereMove.cs" />
     <Compile Include="Assets\script\splash\IntroFade.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\font\Ubuntu_Mono\UFL.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
