--- a/Hackulous/Assembly-CSharp.csproj
+++ b/Hackulous/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\script\GameManager.cs" />
      <Compile Include="Assets\script\SphereMove.cs" />
      <Compile Include="Assets\script\SwitchScene.cs" />
+     <Compile Include="Assets\script\composer\Composer.cs" />
      <Compile Include="Assets\script\splash\IntroFade.cs" />
      <None Include="Assets\font\Ubuntu_Mono\UFL.txt" />
  <Reference Include="UnityEngine.UI">
