Text terminal can now execute commands and answer on user input

--- a/Hackulous/Assembly-CSharp.csproj
+++ b/Hackulous/Assembly-CSharp.csproj
@@ -50,6 +50,8 @@
      <Compile Include="Assets\script\SphereMove.cs" />
      <Compile Include="Assets\script\SwitchScene.cs" />
      <Compile Include="Assets\script\composer\Composer.cs" />
+     <Compile Include="Assets\script\composer\command\CommandExecutor.cs" />
+     <Compile Include="Assets\script\composer\command\HelpCommand.cs" />
      <Compile Include="Assets\script\splash\IntroFade.cs" />
      <None Include="Assets\font\Ubuntu_Mono\UFL.txt" />
  <Reference Include="UnityEngine.UI">
