--- a/Hackulous/Hackulous.CSharp.csproj
+++ b/Hackulous/Hackulous.CSharp.csproj
@@ -68,10 +68,14 @@
     <Compile Include="Assets\script\SphereMove.cs" />
     <Compile Include="Assets\script\SwitchScene.cs" />
     <Compile Include="Assets\script\composer\Composer.cs" />
+    <Compile Include="Assets\script\composer\ComposerEvent.cs" />
     <Compile Include="Assets\script\composer\command\CommandExecutor.cs" />
+    <Compile Include="Assets\script\composer\command\HackCommand.cs" />
     <Compile Include="Assets\script\composer\command\HelpCommand.cs" />
     <Compile Include="Assets\script\composer\key\BackspaceAction.cs" />
     <Compile Include="Assets\script\composer\key\KeyAction.cs" />
+    <Compile Include="Assets\script\composer\key\ReturnAction.cs" />
+    <Compile Include="Assets\script\composer\key\SpaceAction.cs" />
     <Compile Include="Assets\script\splash\IntroFade.cs" />
   </ItemGroup>
   <ItemGroup>
