--- a/Hackulous/Hackulous.CSharp.csproj
+++ b/Hackulous/Hackulous.CSharp.csproj
@@ -58,6 +58,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -65,6 +71,8 @@
   <ItemGroup>
     <Compile Include="Assets\script\Drag.cs" />
     <Compile Include="Assets\script\GameManager.cs" />
+    <Compile Include="Assets\script\Player.cs" />
+    <Compile Include="Assets\script\SaveGame.cs" />
     <Compile Include="Assets\script\SphereMove.cs" />
     <Compile Include="Assets\script\SwitchScene.cs" />
     <Compile Include="Assets\script\composer\Composer.cs" />
@@ -72,11 +80,17 @@
     <Compile Include="Assets\script\composer\command\CommandExecutor.cs" />
     <Compile Include="Assets\script\composer\command\HackCommand.cs" />
     <Compile Include="Assets\script\composer\command\HelpCommand.cs" />
+    <Compile Include="Assets\script\composer\command\StatisticsCommand.cs" />
     <Compile Include="Assets\script\composer\key\BackspaceAction.cs" />
     <Compile Include="Assets\script\composer\key\KeyAction.cs" />
     <Compile Include="Assets\script\composer\key\ReturnAction.cs" />
     <Compile Include="Assets\script\composer\key\SpaceAction.cs" />
+    <Compile Include="Assets\script\database\HackingDatabase.cs" />
+    <Compile Include="Assets\script\hack\Hack.cs" />
+    <Compile Include="Assets\script\hack\HackType.cs" />
     <Compile Include="Assets\script\splash\IntroFade.cs" />
+    <Compile Include="Assets\script\startup\StartUp.cs" />
+    <Compile Include="Assets\script\upgrade\UpgradeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\font\Ubuntu_Mono\UFL.txt" />
